Gradlew is killing me. Will try with maven